# psdaptwor

./: .gitattributes  README.md
firmware/: CMakeLists.txt  fusb302_defines.h  main.c  swy-type-c-pd-messages.bt
firmware/blink/: CMakeLists.txt  blink.c
firmware/boards/: psdaptwor.h
psvr2-pc/: fp-info-cache  fp-lib-table  psvr2-pc.kicad_pcb  psvr2-pc.kicad_prl  psvr2-pc.kicad_pro  psvr2-pc.kicad_sch  psvr2-pc.round-tracks-config  sym-lib-table
psvr2-pc/JLC2KiCad_lib.pretty/: CONN-SMD_472720001.kicad_mod  SW-SMD_4P-L5.1-W5.1-P3.70-LS6.5-TL-2.kicad_mod  USB-C-SMD_TYPE-C-USB-18.kicad_mod  USB-SMD_692622030100.kicad_mod  USB-SMD_ZX360D-B-10P-30.kicad_mod
psvr2-pc/JLC2KiCad_lib.pretty/packages3d/: SW-SMD_4P-L5.1-W5.1-P3.70-LS6.5-TL-2.step  USB-C-SMD_TYPE-C-USB-18.step  USB-SMD_692622030100.step  USB-SMD_ZX360D-B-10P-30.step
psvr2-pc/simulation/: simulation.kicad_prl  simulation.kicad_pro  simulation.kicad_sch
psvr2-pc/simulation/_spice_component_models/: AO3401A.mod  MMBT2222A.txt  README.txt
